src/tests/render_snapshots/snapshots/sabiql__render_snapshots__overlays__sql_modal_analyze_unknown_risk_acknowledge.snap
---
source: src/tests/render_snapshots/overlays.rs
expression: output
---
test_project ▸ test_db ▸ -                                                                                                            connected | localhost:5432/test
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│> public.users                         │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  public.posts                         ││(select a table)                                                                                                          │
│  public.comments                      ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                ╭ SQL Editor ── [SQL] [Plan] [Compare] ────────────────────────────────────────────────────────────────────────────────────────────╮               │
│                │                                                                                                                                  │               │
│                │  ⚠ EXPLAIN ANALYZE                                                                                                               │               │
│                │                                                                                                                                  │               │
│                │  ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────  │               │
│                │                                                                                                                                  │               │
│                │  sabiql can't assess this statement's risk.                                                                                      │               │
│                │  EXPLAIN ANALYZE will execute it.                                                                                                │               │
│                │                                                                                                                                  │               │
│                │   MERGE INTO t USING s ON t.id = s.id WHEN MATCHED THEN DELETE                                                                   │               │
│                │                                                                                                                                  │               │
│                │  Press Enter to execute  Esc: Cancel                                                                                             │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │───────────────┘
│                │                                                                                                                                  │───────────────┐
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │ ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── │               │
│                │  [CONFIRM]                                                                                                      Execute ANALYZE  │               │
│                ╰ Enter: Execute │ Esc: Cancel ────────────────────────────────────────────────────────────────────────────────────────────────────╯               │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
