src/tests/render_snapshots/snapshots/sabiql__render_snapshots__overlays__sql_modal_compare_tab_right_only.snap
---
source: src/tests/render_snapshots/overlays.rs
expression: output
---
test_project ▸ - ▸ -                                                                                                                 not loaded | localhost:5432/test
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│ Press 'r' to load metadata            │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                       ││(select a table)                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                ╭ SQL Editor ── [SQL] [Plan] [Compare] ────────────────────────────────────────────────────────────────────────────────────────────╮               │
│                │  Previous                                                      │  Latest                                                         │               │
│                │  Run EXPLAIN again                                             │  EXPLAIN  (0.04s)                                               │               │
│                │  ───────────────────────────────────────────────────────────── │  ─────────────────────────────────────────────────────────────  │               │
│                │                                                                │  Seq Scan on users  (cost=0.00..10.20 rows=10 width=3273)       │               │
│                │                                                                │    Filter: email_verified                                       │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │───────────────┘
│                │                                                                                                                                  │───────────────┐
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │ ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── │               │
│                │  [NORMAL]                                                                                                                 Ready  │               │
│                ╰ e: Edit │ Tab/⇧Tab: Switch │ Esc: Close ─────────────────────────────────────────────────────────────────────────────────────────╯               │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
